2009-05-29  Jérôme Laheurte  <fraca7@free.fr>

	* fr.lproj/Localizable.strings: Fix french translation spelling

