@@ -9,9 +9,9 @@
 	};
 	1D3623250D0F684500981E51 /* TaskCoachAppDelegate.m */ = {
 		uiCtxt = {
-			sepNavIntBoundsRect = "{{0, 0}, {1274, 784}}";
+			sepNavIntBoundsRect = "{{0, 0}, {1274, 770}}";
 			sepNavSelRange = "{301, 67}";
-			sepNavVisRange = "{0, 999}";
+			sepNavVisRange = "{0, 1240}";
 			sepNavWindowFrame = "{{15, 173}, {1009, 1000}}";
 		};
 	};
@@ -22,16 +22,15 @@
 		);
 	};
 	29B97313FDCFA39411CA2CEA /* Project object */ = {
-		activeBuildConfigurationName = "Beta tests phase 2";
+		activeBuildConfigurationName = Debug;
 		activeExecutable = A68EDEB00F1E1EDF00F51FF2 /* TaskCoach */;
-		activeSDKPreference = iphonesimulator3.0;
+		activeSDKPreference = iphonesimulator2.2.1;
 		activeTarget = 1D6058900D05DD3D006BFB54 /* TaskCoach */;
 		addToTargets = (
 			1D6058900D05DD3D006BFB54 /* TaskCoach */,
 		);
 		breakpoints = (
 			A68EDFA90F1E2C5900F51FF2 /* TaskCoachAppDelegate.m:17 */,
-			A611CC520FAD7B360087F97B /* TaskViewController.m:412 */,
 		);
 		codeSenseManager = A68EDEC10F1E1EED00F51FF2 /* Code sense */;
 		executables = (
@@ -134,8 +133,8 @@
 					PBXFileDataSource_Warnings_ColumnID,
 				);
 			};
-			PBXPerProjectTemplateStateSaveDate = 264968886;
-			PBXWorkspaceStateSaveDate = 264968886;
+			PBXPerProjectTemplateStateSaveDate = 265306464;
+			PBXWorkspaceStateSaveDate = 265306464;
 		};
 		perUserProjectItems = {
 			A604D9BA0F31CCC300D3DC79 /* PBXTextBookmark */ = A604D9BA0F31CCC300D3DC79 /* PBXTextBookmark */;
@@ -174,6 +173,21 @@
 			A62760810F22209F0041D761 /* PBXTextBookmark */ = A62760810F22209F0041D761 /* PBXTextBookmark */;
 			A627608D0F22209F0041D761 /* PBXTextBookmark */ = A627608D0F22209F0041D761 /* PBXTextBookmark */;
 			A627608E0F22209F0041D761 /* PBXTextBookmark */ = A627608E0F22209F0041D761 /* PBXTextBookmark */;
+			A628F6940FD043D50033FD1D /* PlistBookmark */ = A628F6940FD043D50033FD1D /* PlistBookmark */;
+			A628F6950FD043D50033FD1D /* PBXTextBookmark */ = A628F6950FD043D50033FD1D /* PBXTextBookmark */;
+			A628F6980FD043D50033FD1D /* PlistBookmark */ = A628F6980FD043D50033FD1D /* PlistBookmark */;
+			A628F6990FD043D50033FD1D /* PBXTextBookmark */ = A628F6990FD043D50033FD1D /* PBXTextBookmark */;
+			A628F69A0FD043D50033FD1D /* PBXTextBookmark */ = A628F69A0FD043D50033FD1D /* PBXTextBookmark */;
+			A628F69B0FD043D50033FD1D /* PBXTextBookmark */ = A628F69B0FD043D50033FD1D /* PBXTextBookmark */;
+			A628F6B00FD0440A0033FD1D /* PBXTextBookmark */ = A628F6B00FD0440A0033FD1D /* PBXTextBookmark */;
+			A628F6B40FD044130033FD1D /* PBXTextBookmark */ = A628F6B40FD044130033FD1D /* PBXTextBookmark */;
+			A628F6B50FD044130033FD1D /* PBXTextBookmark */ = A628F6B50FD044130033FD1D /* PBXTextBookmark */;
+			A628F6B70FD044130033FD1D /* PBXTextBookmark */ = A628F6B70FD044130033FD1D /* PBXTextBookmark */;
+			A628F6B80FD044130033FD1D /* PBXTextBookmark */ = A628F6B80FD044130033FD1D /* PBXTextBookmark */;
+			A628F6C60FD0446E0033FD1D /* PBXTextBookmark */ = A628F6C60FD0446E0033FD1D /* PBXTextBookmark */;
+			A628F6C70FD0446E0033FD1D /* PBXTextBookmark */ = A628F6C70FD0446E0033FD1D /* PBXTextBookmark */;
+			A628F6C80FD0446E0033FD1D /* PBXTextBookmark */ = A628F6C80FD0446E0033FD1D /* PBXTextBookmark */;
+			A628F6CB0FD044960033FD1D /* PBXTextBookmark */ = A628F6CB0FD044960033FD1D /* PBXTextBookmark */;
 			A6291CE00F23276C00CF1067 /* PBXTextBookmark */ = A6291CE00F23276C00CF1067 /* PBXTextBookmark */;
 			A634EFFC0F88B64400DFE235 /* PBXTextBookmark */ = A634EFFC0F88B64400DFE235 /* PBXTextBookmark */;
 			A639F7400F220D0500EDAFBB /* PBXTextBookmark */ = A639F7400F220D0500EDAFBB /* PBXTextBookmark */;
@@ -183,7 +197,6 @@
 			A63CC0980F517370003669FD /* PBXTextBookmark */ = A63CC0980F517370003669FD /* PBXTextBookmark */;
 			A63CC09D0F517370003669FD /* PBXTextBookmark */ = A63CC09D0F517370003669FD /* PBXTextBookmark */;
 			A63CC09E0F517370003669FD /* PBXTextBookmark */ = A63CC09E0F517370003669FD /* PBXTextBookmark */;
-			A63CC0CB0F5175FD003669FD /* PBXTextBookmark */ = A63CC0CB0F5175FD003669FD /* PBXTextBookmark */;
 			A63CC0EE0F51774D003669FD /* PBXTextBookmark */ = A63CC0EE0F51774D003669FD /* PBXTextBookmark */;
 			A63CC0EF0F51774D003669FD /* PBXTextBookmark */ = A63CC0EF0F51774D003669FD /* PBXTextBookmark */;
 			A64603B90F22358200FC71AD /* PBXTextBookmark */ = A64603B90F22358200FC71AD /* PBXTextBookmark */;
@@ -208,7 +221,6 @@
 			A6664E180F2B4A8600638C68 /* PBXTextBookmark */ = A6664E180F2B4A8600638C68 /* PBXTextBookmark */;
 			A6664ECF0F2B523200638C68 /* PBXTextBookmark */ = A6664ECF0F2B523200638C68 /* PBXTextBookmark */;
 			A6664ED00F2B523200638C68 /* PBXTextBookmark */ = A6664ED00F2B523200638C68 /* PBXTextBookmark */;
-			A669E6740FB6FEB70014CD17 /* PBXTextBookmark */ = A669E6740FB6FEB70014CD17 /* PBXTextBookmark */;
 			A669E6750FB6FEB70014CD17 /* PBXTextBookmark */ = A669E6750FB6FEB70014CD17 /* PBXTextBookmark */;
 			A66AFCF50F6BABD2003B37C1 /* PlistBookmark */ = A66AFCF50F6BABD2003B37C1 /* PlistBookmark */;
 			A66E468A0F46CE23004712E2 /* PBXTextBookmark */ = A66E468A0F46CE23004712E2 /* PBXTextBookmark */;
@@ -244,7 +256,6 @@
 			A680C0FD0F47390F00A8D18B /* PBXTextBookmark */ = A680C0FD0F47390F00A8D18B /* PBXTextBookmark */;
 			A680C0FE0F47390F00A8D18B /* PBXTextBookmark */ = A680C0FE0F47390F00A8D18B /* PBXTextBookmark */;
 			A680C0FF0F47390F00A8D18B /* PBXTextBookmark */ = A680C0FF0F47390F00A8D18B /* PBXTextBookmark */;
-			A685587B0FCB1B0A00274E05 /* PlistBookmark */ = A685587B0FCB1B0A00274E05 /* PlistBookmark */;
 			A68C7CDF0F814346008625F7 /* PBXTextBookmark */ = A68C7CDF0F814346008625F7 /* PBXTextBookmark */;
 			A68C7CE00F814346008625F7 /* PBXTextBookmark */ = A68C7CE00F814346008625F7 /* PBXTextBookmark */;
 			A68C7CE10F814346008625F7 /* PBXTextBookmark */ = A68C7CE10F814346008625F7 /* PBXTextBookmark */;
@@ -283,7 +294,6 @@
 			A69E83380F5163D3000E45B4 /* PBXTextBookmark */ = A69E83380F5163D3000E45B4 /* PBXTextBookmark */;
 			A69E83390F5163D3000E45B4 /* PBXTextBookmark */ = A69E83390F5163D3000E45B4 /* PBXTextBookmark */;
 			A6A8430D0FB70B74009BA072 /* PBXTextBookmark */ = A6A8430D0FB70B74009BA072 /* PBXTextBookmark */;
-			A6A8F1DC0FB70C1400285566 /* PBXTextBookmark */ = A6A8F1DC0FB70C1400285566 /* PBXTextBookmark */;
 			A6A9D0EB0F31DCD500CBB256 /* PBXTextBookmark */ = A6A9D0EB0F31DCD500CBB256 /* PBXTextBookmark */;
 			A6AE0B250F1E403B00A8760C /* PBXTextBookmark */ = A6AE0B250F1E403B00A8760C /* PBXTextBookmark */;
 			A6AE0B260F1E403B00A8760C /* PBXTextBookmark */ = A6AE0B260F1E403B00A8760C /* PBXTextBookmark */;
@@ -294,7 +304,6 @@
 			A6B66D390FCB19F4007B435E /* PBXTextBookmark */ = A6B66D390FCB19F4007B435E /* PBXTextBookmark */;
 			A6B66D3B0FCB19F4007B435E /* PBXTextBookmark */ = A6B66D3B0FCB19F4007B435E /* PBXTextBookmark */;
 			A6B66D400FCB1AA9007B435E /* PlistBookmark */ = A6B66D400FCB1AA9007B435E /* PlistBookmark */;
-			A6B66D420FCB1AA9007B435E /* PlistBookmark */ = A6B66D420FCB1AA9007B435E /* PlistBookmark */;
 			A6BB19ED0F48173800ED22B3 /* PBXTextBookmark */ = A6BB19ED0F48173800ED22B3 /* PBXTextBookmark */;
 			A6BF99660F3F06960065060F /* PBXTextBookmark */ = A6BF99660F3F06960065060F /* PBXTextBookmark */;
 			A6BF99970F3F0B290065060F /* PBXTextBookmark */ = A6BF99970F3F0B290065060F /* PBXTextBookmark */;
@@ -353,7 +362,6 @@
 			A6FA97ED0F2B2F0E00505D87 /* PBXTextBookmark */ = A6FA97ED0F2B2F0E00505D87 /* PBXTextBookmark */;
 			A6FACDD20FB70DA900A594EB /* PBXTextBookmark */ = A6FACDD20FB70DA900A594EB /* PBXTextBookmark */;
 			A6FACDF40FB70E7700A594EB /* PBXTextBookmark */ = A6FACDF40FB70E7700A594EB /* PBXTextBookmark */;
-			A6FACDF50FB70E7700A594EB /* PBXTextBookmark */ = A6FACDF50FB70E7700A594EB /* PBXTextBookmark */;
 			A6FACDF60FB70E7700A594EB /* PBXTextBookmark */ = A6FACDF60FB70E7700A594EB /* PBXTextBookmark */;
 			A6FACDF80FB70E7700A594EB /* PBXTextBookmark */ = A6FACDF80FB70E7700A594EB /* PBXTextBookmark */;
 		};
@@ -515,23 +523,6 @@
 		rType = 0;
 		vrLen = 253;
 		vrLoc = 0;
-	};
-	A611CC520FAD7B360087F97B /* TaskViewController.m:412 */ = {
-		isa = PBXFileBreakpoint;
-		actions = (
-		);
-		breakpointStyle = 0;
-		continueAfterActions = 0;
-		countType = 0;
-		delayBeforeContinue = 0;
-		fileReference = A6DDF8530F1F988600F35108 /* TaskViewController.m */;
-		functionName = "-tableView:didSelectRowAtIndexPath:";
-		hitCount = 0;
-		ignoreCount = 0;
-		lineNumber = 412;
-		location = TaskCoach;
-		modificationTime = 263653299.918841;
-		state = 2;
 	};
 	A6142CD10F35DE61001DD420 /* PositionStore.h */ = {
 		uiCtxt = {
@@ -786,9 +777,9 @@
 	};
 	A61DE2380F1E3F5B004BC97E /* Task.m */ = {
 		uiCtxt = {
-			sepNavIntBoundsRect = "{{0, 0}, {1416, 1904}}";
-			sepNavSelRange = "{1894, 0}";
-			sepNavVisRange = "{917, 979}";
+			sepNavIntBoundsRect = "{{0, 0}, {1631, 1974}}";
+			sepNavSelRange = "{1923, 0}";
+			sepNavVisRange = "{1701, 600}";
 		};
 	};
 	A623C47F0F63DD7200E7FD46 /* PBXTextBookmark */ = {
@@ -933,6 +924,169 @@
 		vrLen = 658;
 		vrLoc = 0;
 	};
+	A628F6900FD043CE0033FD1D /* TaskCell.m */ = {
+		isa = PBXFileReference;
+		lastKnownFileType = sourcecode.c.objc;
+		name = TaskCell.m;
+		path = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Classes/TaskCell.m";
+		sourceTree = "<group>";
+		uiCtxt = {
+			sepNavIntBoundsRect = "{{0, 0}, {1631, 1414}}";
+			sepNavSelRange = "{691, 0}";
+			sepNavVisRange = "{819, 612}";
+		};
+	};
+	A628F6940FD043D50033FD1D /* PlistBookmark */ = {
+		isa = PlistBookmark;
+		fRef = 8D1107310486CEB800E47090 /* Info.plist */;
+		fallbackIsa = PBXBookmark;
+		isK = 0;
+		kPath = (
+			LSRequiresIPhoneOS,
+		);
+		name = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Info.plist";
+		rLen = 0;
+		rLoc = 2147483647;
+	};
+	A628F6950FD043D50033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A68EDEF60F1E227500F51FF2 /* taskcoach.sql */;
+		name = "taskcoach.sql: 67";
+		rLen = 0;
+		rLoc = 1948;
+		rType = 0;
+		vrLen = 1585;
+		vrLoc = 382;
+	};
+	A628F6980FD043D50033FD1D /* PlistBookmark */ = {
+		isa = PlistBookmark;
+		fRef = 8D1107310486CEB800E47090 /* Info.plist */;
+		fallbackIsa = PBXBookmark;
+		isK = 0;
+		kPath = (
+			LSRequiresIPhoneOS,
+		);
+		name = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Info.plist";
+		rLen = 0;
+		rLoc = 2147483647;
+	};
+	A628F6990FD043D50033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A68EDEF60F1E227500F51FF2 /* taskcoach.sql */;
+		name = "taskcoach.sql: 67";
+		rLen = 0;
+		rLoc = 1948;
+		rType = 0;
+		vrLen = 1585;
+		vrLoc = 382;
+	};
+	A628F69A0FD043D50033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A61DE2380F1E3F5B004BC97E /* Task.m */;
+		name = "Task.m: 78";
+		rLen = 0;
+		rLoc = 1894;
+		rType = 0;
+		vrLen = 968;
+		vrLoc = 2143;
+	};
+	A628F69B0FD043D50033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A628F6900FD043CE0033FD1D /* TaskCell.m */;
+		name = "TaskCell.m: 68";
+		rLen = 21;
+		rLoc = 1243;
+		rType = 0;
+		vrLen = 1036;
+		vrLoc = 411;
+	};
+	A628F6B00FD0440A0033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A61DE2380F1E3F5B004BC97E /* Task.m */;
+		rLen = 1;
+		rLoc = 79;
+		rType = 1;
+	};
+	A628F6B40FD044130033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A64603A90F2234D900FC71AD /* TaskCell.m */;
+		name = "TaskCell.m: 48";
+		rLen = 0;
+		rLoc = 691;
+		rType = 0;
+		vrLen = 1053;
+		vrLoc = 555;
+	};
+	A628F6B50FD044130033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A6FACDDF0FB70E0000A594EB /* TaskViewController.m */;
+		name = "TaskViewController.m: 412";
+		rLen = 92;
+		rLoc = 10897;
+		rType = 0;
+		vrLen = 1650;
+		vrLoc = 9966;
+	};
+	A628F6B70FD044130033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A64603A90F2234D900FC71AD /* TaskCell.m */;
+		name = "TaskCell.m: 48";
+		rLen = 0;
+		rLoc = 691;
+		rType = 0;
+		vrLen = 1053;
+		vrLoc = 555;
+	};
+	A628F6B80FD044130033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A6FACDDF0FB70E0000A594EB /* TaskViewController.m */;
+		name = "TaskViewController.m: 412";
+		rLen = 92;
+		rLoc = 10897;
+		rType = 0;
+		vrLen = 1650;
+		vrLoc = 9966;
+	};
+	A628F6C60FD0446E0033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = 1D3623250D0F684500981E51 /* TaskCoachAppDelegate.m */;
+		name = "TaskCoachAppDelegate.m: 17";
+		rLen = 67;
+		rLoc = 301;
+		rType = 0;
+		vrLen = 1240;
+		vrLoc = 0;
+	};
+	A628F6C70FD0446E0033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A61DE2380F1E3F5B004BC97E /* Task.m */;
+		name = "Task.m: 93";
+		rLen = 0;
+		rLoc = 2298;
+		rType = 0;
+		vrLen = 1292;
+		vrLoc = 1469;
+	};
+	A628F6C80FD0446E0033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = 1D3623250D0F684500981E51 /* TaskCoachAppDelegate.m */;
+		name = "TaskCoachAppDelegate.m: 17";
+		rLen = 67;
+		rLoc = 301;
+		rType = 0;
+		vrLen = 1240;
+		vrLoc = 0;
+	};
+	A628F6CB0FD044960033FD1D /* PBXTextBookmark */ = {
+		isa = PBXTextBookmark;
+		fRef = A61DE2380F1E3F5B004BC97E /* Task.m */;
+		name = "Task.m: 80";
+		rLen = 24;
+		rLoc = 1897;
+		rType = 0;
+		vrLen = 1292;
+		vrLoc = 1469;
+	};
 	A6291CE00F23276C00CF1067 /* PBXTextBookmark */ = {
 		isa = PBXTextBookmark;
 		fRef = A6EA67990F2255E7004108B5 /* CheckView.m */;
@@ -1053,23 +1207,6 @@
 		vrLen = 204;
 		vrLoc = 0;
 	};
-	A63CC0CB0F5175FD003669FD /* PBXTextBookmark */ = {
-		isa = PBXTextBookmark;
-		fRef = A68EDEF60F1E227500F51FF2 /* taskcoach.sql */;
-		name = "taskcoach.sql: 25";
-		rLen = 0;
-		rLoc = 512;
-		rType = 0;
-		vrLen = 1053;
-		vrLoc = 0;
-	};
-	A63CC0E50F5176FC003669FD /* TaskCell.m */ = {
-		isa = PBXFileReference;
-		lastKnownFileType = sourcecode.c.objc;
-		name = TaskCell.m;
-		path = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Classes/TaskCell.m";
-		sourceTree = "<absolute>";
-	};
 	A63CC0EE0F51774D003669FD /* PBXTextBookmark */ = {
 		isa = PBXTextBookmark;
 		fRef = A64603A80F2234D900FC71AD /* TaskCell.h */;
@@ -1113,9 +1250,9 @@
 	};
 	A64603A90F2234D900FC71AD /* TaskCell.m */ = {
 		uiCtxt = {
-			sepNavIntBoundsRect = "{{0, 0}, {1274, 1470}}";
-			sepNavSelRange = "{1494, 0}";
-			sepNavVisRange = "{1030, 749}";
+			sepNavIntBoundsRect = "{{0, 0}, {1631, 1414}}";
+			sepNavSelRange = "{691, 0}";
+			sepNavVisRange = "{819, 612}";
 		};
 	};
 	A64603B90F22358200FC71AD /* PBXTextBookmark */ = {
@@ -1422,16 +1559,6 @@
 		rLoc = 1354;
 		rType = 0;
 		vrLen = 532;
-		vrLoc = 0;
-	};
-	A669E6740FB6FEB70014CD17 /* PBXTextBookmark */ = {
-		isa = PBXTextBookmark;
-		fRef = 1D3623250D0F684500981E51 /* TaskCoachAppDelegate.m */;
-		name = "TaskCoachAppDelegate.m: 17";
-		rLen = 67;
-		rLoc = 301;
-		rType = 0;
-		vrLen = 999;
 		vrLoc = 0;
 	};
 	A669E6750FB6FEB70014CD17 /* PBXTextBookmark */ = {
@@ -1920,18 +2047,6 @@
 		vrLen = 406;
 		vrLoc = 0;
 	};
-	A685587B0FCB1B0A00274E05 /* PlistBookmark */ = {
-		isa = PlistBookmark;
-		fRef = 8D1107310486CEB800E47090 /* Info.plist */;
-		fallbackIsa = PBXBookmark;
-		isK = 0;
-		kPath = (
-			LSRequiresIPhoneOS,
-		);
-		name = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Info.plist";
-		rLen = 0;
-		rLoc = 2147483647;
-	};
 	A68C7CDF0F814346008625F7 /* PBXTextBookmark */ = {
 		isa = PBXTextBookmark;
 		fRef = A680C0DC0F47368E00A8D18B /* fr */;
@@ -2085,9 +2200,9 @@
 	};
 	A68EDEF60F1E227500F51FF2 /* taskcoach.sql */ = {
 		uiCtxt = {
-			sepNavIntBoundsRect = "{{0, 0}, {1274, 1176}}";
-			sepNavSelRange = "{512, 0}";
-			sepNavVisRange = "{0, 1053}";
+			sepNavIntBoundsRect = "{{0, 0}, {1274, 1008}}";
+			sepNavSelRange = "{1948, 0}";
+			sepNavVisRange = "{382, 1585}";
 		};
 	};
 	A68EDF120F1E24AB00F51FF2 /* PlistBookmark */ = {
@@ -2303,11 +2418,11 @@
 		delayBeforeContinue = 0;
 		fileReference = 1D3623250D0F684500981E51 /* TaskCoachAppDelegate.m */;
 		functionName = "-applicationDidFinishLaunching:";
-		hitCount = 0;
+		hitCount = 1;
 		ignoreCount = 0;
 		lineNumber = 17;
 		location = TaskCoach;
-		modificationTime = 263653299.918282;
+		modificationTime = 265307243.866308;
 		state = 2;
 	};
 	A68EE03C0F1E303800F51FF2 /* PBXTextBookmark */ = {
@@ -2511,16 +2626,6 @@
 		vrLen = 646;
 		vrLoc = 827;
 	};
-	A6A8F1DC0FB70C1400285566 /* PBXTextBookmark */ = {
-		isa = PBXTextBookmark;
-		fRef = A63CC0E50F5176FC003669FD /* TaskCell.m */;
-		name = "TaskCell.m: 82";
-		rLen = 0;
-		rLoc = 1494;
-		rType = 0;
-		vrLen = 749;
-		vrLoc = 1030;
-	};
 	A6A9D0EB0F31DCD500CBB256 /* PBXTextBookmark */ = {
 		isa = PBXTextBookmark;
 		fRef = A604D9A90F31CB6100D3DC79 /* GetGUIDState.h */;
@@ -2636,18 +2741,6 @@
 		name = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Entitlements.plist";
 		rLen = 0;
 		rLoc = 2147483647;
-	};
-	A6B66D420FCB1AA9007B435E /* PlistBookmark */ = {
-		isa = PlistBookmark;
-		fRef = 8D1107310486CEB800E47090 /* Info.plist */;
-		fallbackIsa = PBXBookmark;
-		isK = 0;
-		kPath = (
-			CFBundleSignature,
-		);
-		name = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Info.plist";
-		rLen = 4;
-		rLoc = 0;
 	};
 	A6BB19ED0F48173800ED22B3 /* PBXTextBookmark */ = {
 		isa = PBXTextBookmark;
@@ -3480,6 +3573,11 @@
 		name = TaskViewController.m;
 		path = "/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/Classes/TaskViewController.m";
 		sourceTree = "<absolute>";
+		uiCtxt = {
+			sepNavIntBoundsRect = "{{0, 0}, {1274, 5768}}";
+			sepNavSelRange = "{10897, 92}";
+			sepNavVisRange = "{9966, 1650}";
+		};
 	};
 	A6FACDE90FB70E3000A594EB /* TaskDetailsController.m */ = {
 		isa = PBXFileReference;
@@ -3497,16 +3595,6 @@
 		rType = 0;
 		vrLen = 2036;
 		vrLoc = 7669;
-	};
-	A6FACDF50FB70E7700A594EB /* PBXTextBookmark */ = {
-		isa = PBXTextBookmark;
-		fRef = A6FACDDF0FB70E0000A594EB /* TaskViewController.m */;
-		name = "TaskViewController.m: 316";
-		rLen = 0;
-		rLoc = 7785;
-		rType = 0;
-		vrLen = 1158;
-		vrLoc = 7202;
 	};
 	A6FACDF60FB70E7700A594EB /* PBXTextBookmark */ = {
 		isa = PBXTextBookmark;
