@@ -269,15 +269,10 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateExpansionKey</key>
 							<array>
 								<string>29B97314FDCFA39411CA2CEA</string>
-								<string>19C28FACFE9D520D11CA2CBB</string>
-								<string>1C77FABC04509CD000000102</string>
-								<string>1C3E0DCA080725EA00A55177</string>
 							</array>
 							<key>PBXSmartGroupTreeModuleOutlineStateSelectionKey</key>
 							<array>
 								<array>
-									<integer>6</integer>
-									<integer>5</integer>
 									<integer>0</integer>
 								</array>
 							</array>
@@ -315,7 +310,7 @@
 								<key>PBXProjectModuleGUID</key>
 								<string>A68EDEBA0F1E1EED00F51FF2</string>
 								<key>PBXProjectModuleLabel</key>
-								<string>Info.plist</string>
+								<string>Task.m</string>
 								<key>PBXSplitModuleInNavigatorKey</key>
 								<dict>
 									<key>Split0</key>
@@ -323,11 +318,11 @@
 										<key>PBXProjectModuleGUID</key>
 										<string>A68EDEBB0F1E1EED00F51FF2</string>
 										<key>PBXProjectModuleLabel</key>
-										<string>Info.plist</string>
+										<string>Task.m</string>
 										<key>_historyCapacity</key>
 										<integer>0</integer>
 										<key>bookmark</key>
-										<string>A685587B0FCB1B0A00274E05</string>
+										<string>A628F6CB0FD044960033FD1D</string>
 										<key>history</key>
 										<array>
 											<string>A68EDF5D0F1E28CE00F51FF2</string>
@@ -389,7 +384,6 @@
 											<string>A69E83390F5163D3000E45B4</string>
 											<string>A63CC0970F517370003669FD</string>
 											<string>A63CC0980F517370003669FD</string>
-											<string>A63CC0CB0F5175FD003669FD</string>
 											<string>A63CC0EE0F51774D003669FD</string>
 											<string>A63CC0EF0F51774D003669FD</string>
 											<string>A67E47F60F5A944B00000A24</string>
@@ -423,17 +417,19 @@
 											<string>A634EFFC0F88B64400DFE235</string>
 											<string>A605760F0FA458A10054E4C3</string>
 											<string>A664C0A90FA4605D00748B47</string>
-											<string>A669E6740FB6FEB70014CD17</string>
 											<string>A669E6750FB6FEB70014CD17</string>
 											<string>A6A8430D0FB70B74009BA072</string>
-											<string>A6A8F1DC0FB70C1400285566</string>
 											<string>A6FACDD20FB70DA900A594EB</string>
 											<string>A6FACDF40FB70E7700A594EB</string>
-											<string>A6FACDF50FB70E7700A594EB</string>
 											<string>A6FACDF60FB70E7700A594EB</string>
 											<string>A6B66D390FCB19F4007B435E</string>
 											<string>A6B66D400FCB1AA9007B435E</string>
-											<string>A6B66D420FCB1AA9007B435E</string>
+											<string>A628F6940FD043D50033FD1D</string>
+											<string>A628F6950FD043D50033FD1D</string>
+											<string>A628F6B40FD044130033FD1D</string>
+											<string>A628F6B50FD044130033FD1D</string>
+											<string>A628F6C60FD0446E0033FD1D</string>
+											<string>A628F6B00FD0440A0033FD1D</string>
 										</array>
 										<key>prevStack</key>
 										<array>
@@ -550,6 +546,14 @@
 											<string>A66AFCF50F6BABD2003B37C1</string>
 											<string>A6FACDF80FB70E7700A594EB</string>
 											<string>A6B66D3B0FCB19F4007B435E</string>
+											<string>A628F6980FD043D50033FD1D</string>
+											<string>A628F6990FD043D50033FD1D</string>
+											<string>A628F69A0FD043D50033FD1D</string>
+											<string>A628F69B0FD043D50033FD1D</string>
+											<string>A628F6B70FD044130033FD1D</string>
+											<string>A628F6B80FD044130033FD1D</string>
+											<string>A628F6C70FD0446E0033FD1D</string>
+											<string>A628F6C80FD0446E0033FD1D</string>
 										</array>
 									</dict>
 									<key>SplitCount</key>
@@ -563,18 +567,18 @@
 							<key>GeometryConfiguration</key>
 							<dict>
 								<key>Frame</key>
-								<string>{{0, 0}, {1335, 283}}</string>
+								<string>{{0, 0}, {1335, 737}}</string>
 								<key>RubberWindowFrame</key>
 								<string>85 170 1692 987 0 0 1920 1178 </string>
 							</dict>
 							<key>Module</key>
 							<string>PBXNavigatorGroup</string>
 							<key>Proportion</key>
-							<string>283pt</string>
+							<string>737pt</string>
 						</dict>
 						<dict>
 							<key>Proportion</key>
-							<string>658pt</string>
+							<string>204pt</string>
 							<key>Tabs</key>
 							<array>
 								<dict>
@@ -588,7 +592,9 @@
 									<key>GeometryConfiguration</key>
 									<dict>
 										<key>Frame</key>
-										<string>{{10, 27}, {1335, 631}}</string>
+										<string>{{10, 27}, {1335, 177}}</string>
+										<key>RubberWindowFrame</key>
+										<string>85 170 1692 987 0 0 1920 1178 </string>
 									</dict>
 									<key>Module</key>
 									<string>XCDetailModule</string>
@@ -631,7 +637,7 @@
 									<key>ContentConfiguration</key>
 									<dict>
 										<key>PBXBuildLogShowsTranscriptDefaultKey</key>
-										<string>{{0, 155}, {1335, 476}}</string>
+										<string>{{0, 79}, {1335, 552}}</string>
 										<key>PBXProjectModuleGUID</key>
 										<string>XCMainBuildResultsModuleGUID</string>
 										<key>PBXProjectModuleLabel</key>
@@ -645,8 +651,6 @@
 									<dict>
 										<key>Frame</key>
 										<string>{{10, 27}, {1335, 631}}</string>
-										<key>RubberWindowFrame</key>
-										<string>85 170 1692 987 0 0 1920 1178 </string>
 									</dict>
 									<key>Module</key>
 									<string>PBXBuildResultsModule</string>
@@ -674,11 +678,11 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A68558770FCB1AD100274E05</string>
+				<string>A628F69D0FD043D50033FD1D</string>
 				<string>1CA23ED40692098700951B8B</string>
-				<string>A68558780FCB1AD100274E05</string>
+				<string>A628F69E0FD043D50033FD1D</string>
 				<string>A68EDEBA0F1E1EED00F51FF2</string>
-				<string>A68558790FCB1AD100274E05</string>
+				<string>A628F69F0FD043D50033FD1D</string>
 				<string>1CA23EDF0692099D00951B8B</string>
 				<string>1CA23EE00692099D00951B8B</string>
 				<string>1CA23EE10692099D00951B8B</string>
@@ -825,14 +829,14 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A695CDDD0FB70E8B00947A84</string>
+				<string>A628F6A00FD043D50033FD1D</string>
 				<string>1CCC7628064C1048000F2A68</string>
 				<string>1CCC7629064C1048000F2A68</string>
-				<string>A695CDDE0FB70E8B00947A84</string>
-				<string>A695CDDF0FB70E8B00947A84</string>
-				<string>A695CDE00FB70E8B00947A84</string>
-				<string>A695CDE10FB70E8B00947A84</string>
-				<string>A695CDE20FB70E8B00947A84</string>
+				<string>A628F6A10FD043D50033FD1D</string>
+				<string>A628F6A20FD043D50033FD1D</string>
+				<string>A628F6A30FD043D50033FD1D</string>
+				<string>A628F6A40FD043D50033FD1D</string>
+				<string>A628F6A50FD043D50033FD1D</string>
 			</array>
 			<key>ToolbarConfiguration</key>
 			<string>xcode.toolbar.config.debugV3</string>
@@ -862,6 +866,8 @@
 	<integer>5</integer>
 	<key>WindowOrderList</key>
 	<array>
+		<string>A628F6AB0FD043F00033FD1D</string>
+		<string>A628F6A70FD043D50033FD1D</string>
 		<string>/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/TaskCoach.xcodeproj</string>
 	</array>
 	<key>WindowString</key>
